# NIPTK

./: .gitignore  .gitmodules  .travis.yml  00CORE_2README_8md.html  00CORE_8c.html  00CORE_8h.html  00CORE_8h_source.html  CHANGELOG.md  CHANGELOG_8md.html  CLI__Overview_8md.html  CLIcore_8c.html  CLIcore_8c.js  CLIcore_8h.html  CLIcore_8h_source.html  CLIcore_8md.html  CLImain_8c.html  CMakeLists.txt  COREMOD__arith_2README_8md.html  COREMOD__arith_8c.html  COREMOD__arith_8h.html  COREMOD__arith_8h_source.html  COREMOD__iofits_2README_8md.html  COREMOD__iofits_8c.html  COREMOD__iofits_8c.js  COREMOD__iofits_8h.html  COREMOD__iofits_8h_source.html  COREMOD__memory_2README_8md.html  COREMOD__memory_8c.html  COREMOD__memory_8h.html  COREMOD__memory_8h.js  COREMOD__memory_8h_source.html  COREMOD__tools_2README_8md.html  COREMOD__tools_8c.html  COREMOD__tools_8h.html  COREMOD__tools_8h_source.html  CommandLineInterface_2README_8md.html  Compilation_8md.html  DocumentingCode_8md.html  DownloadCompile_8md.html  Doxyfile  (+311 more)
_cmakebuild/: CMakeCache.txt  cmake_install.cmake
_cmakebuild/src/00CORE/: cmake_install.cmake
_cmakebuild/src/COREMOD_arith/: cmake_install.cmake
_cmakebuild/src/COREMOD_iofits/: cmake_install.cmake
_cmakebuild/src/COREMOD_memory/: cmake_install.cmake
_cmakebuild/src/COREMOD_tools/: cmake_install.cmake
_cmakebuild/src/ImageStreamIO/: cmake_install.cmake
_cmakebuild/src/ZernikePolyn/: cmake_install.cmake
_cmakebuild/src/cudacomp/: cmake_install.cmake
_cmakebuild/src/fft/: cmake_install.cmake
_cmakebuild/src/image_basic/: cmake_install.cmake
_cmakebuild/src/image_filter/: cmake_install.cmake
_cmakebuild/src/image_format/: cmake_install.cmake
_cmakebuild/src/image_gen/: cmake_install.cmake
_cmakebuild/src/img_reduce/: cmake_install.cmake
_cmakebuild/src/info/: cmake_install.cmake
_cmakebuild/src/kdtree/: cmake_install.cmake
_cmakebuild/src/linARfilterPred/: cmake_install.cmake
_cmakebuild/src/linopt_imtools/: cmake_install.cmake
_cmakebuild/src/psf/: cmake_install.cmake
_cmakebuild/src/statistic/: cmake_install.cmake
doc/: milk_GettingStarted.md
html/: 00CORE_2README_8md.html  00CORE_8c.html  00CORE_8h.html  00CORE_8h_source.html  AOsystSim_8c.html  AOsystSim_8h.html  AOsystSim_8h_source.html  AtmosphereModel_8c.html  AtmosphereModel_8h.html  AtmosphereModel_8h_source.html  AtmosphericTurbulence_8c.html  AtmosphericTurbulence_8h.html  AtmosphericTurbulence_8h_source.html  CHANGELOG_8md.html  CLI__Overview_8md.html  CLIcore_8c.html  CLIcore_8c.js  CLIcore_8h.html  CLIcore_8h_source.html  CLIcore_8md.html  CLImain_8c.html  COREMOD__arith_2README_8md.html  COREMOD__arith_8c.html  COREMOD__arith_8h.html  COREMOD__arith_8h_source.html  COREMOD__iofits_2README_8md.html  COREMOD__iofits_8c.html  COREMOD__iofits_8h.html  COREMOD__iofits_8h_source.html  COREMOD__memory_2README_8md.html  COREMOD__memory_8c.html  COREMOD__memory_8h.html  COREMOD__memory_8h_source.html  COREMOD__tools_2README_8md.html  COREMOD__tools_8c.html  COREMOD__tools_8h.html  COREMOD__tools_8h_source.html  CommandLineInterface_2README_8md.html  Compilation_8md.html  DocumentingCode_8md.html  (+395 more)
html/search/: all_0.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  files_1.js  files_8.js  files_9.js  files_b.js  files_d.js  functions_0.js  functions_1.js  functions_11.js  functions_12.js  functions_13.js  functions_18.js  functions_3.js  functions_6.js  functions_9.js  (+34 more)
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  files_1.js  files_3.js  files_9.js  files_b.js  functions_0.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_3.js  functions_6.js  functions_9.js  functions_b.js  functions_c.js  pages_6.js  searchdata.js  variables_1.js  variables_11.js  variables_15.js  variables_18.js  (+12 more)
src/: CLIcore.c  CLIcore.h  CLImain.c  Makefile.am
src/exampleModule/: compute_pi.c  exampleModule.c  exampleModule.h
